# Akari

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
config/: akari.toml
docs/: happenings.md
docs/docker/: akari-postgres.md
migrations/: 20260206170642_create_tables.sql  20260206172327_add_indexes.sql  20260507132353_better_time_index.sql  20260711091249_better_category_index.sql
sql/: events.sql  system_events.sql
src/: config.rs  events.rs  main.rs  net.rs  output.rs  parser.rs  patterns.rs  unicode.rs  worker.rs
src/net/: backoff.rs  conn.rs  mod.rs
src/output/: console.rs  file.rs  mod.rs  postgres.rs  rabbitmq.rs
src/parser/: mod.rs  patterns.rs  processors.rs
