[package]
name = "akari"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.10.1"
config-file = "0.2.3"
crossbeam = "0.8.4"
futures-core = "0.3.31"
futures-util = "0.3.31"
lapin = "3.7.1"
lazy_static = "1.5.0"
log = { version = "0.4.28", features = ["max_level_debug", "release_max_level_info"] }
redis-om = { version = "0.1.0", features = ["json"] }
regex = "1.12.2"
reqwest = { version = "0.12.23", features = ["stream"] }
serde = "1.0.228"
serde_json = "1.0.145"
simplelog = "0.12.2"
tokio = { version = "1.47.1", features = ["full"] }
